--- a/package.json
+++ b/package.json
@@ -28,18 +28,22 @@
     "spicedb:health": "curl -s http://localhost:8443/v1/permissions/check -H 'Content-Type: application/json' -H 'Authorization: Bearer mypresharedkey' -d '{\"resource\":{\"objectType\":\"tenant\",\"objectId\":\"health\"},\"permission\":\"read\",\"subject\":{\"object\":{\"objectType\":\"user\",\"objectId\":\"health\"}}}'"
   },
   "dependencies": {
+    "@apollo/server": "^5.2.0",
     "@authzed/authzed-node": "^1.6.1",
     "@aws-sdk/client-s3": "^3.964.0",
     "@aws-sdk/lib-storage": "^3.964.0",
+    "@nestjs/apollo": "^13.2.3",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/graphql": "^13.2.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/throttler": "^6.5.0",
     "argon2": "^0.44.0",
     "busboy": "^1.6.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
+    "graphql": "^16.12.0",
     "nanoid": "^5.1.6",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
