feat: implement S3 validation in bootstrap and add subscription management - Add mandatory S3 availability check during app startup to prevent runtime failures - Modify testS3Connection to always fail if S3 unavailable (remove dev bypass) - Integrate S3 validation phase in main.ts bootstrap sequence - Fix AuthModule import (AuthGuardTemp → AuthGuard) - Implement subscription system in billing module:   - Add Subscription entity with business logic   - Create subscriptions schema with proper indexes   - Implement subscription repository with CRUD operations   - Add subscription service methods (create, update, cancel, generate invoices)   - Add REST endpoints for subscription management   - Update billing service to use subscription prices for invoice generation - Ensure all code compiles and app starts with infrastructure validation This completes the core SaaS features: auth, tenants, billing with subscriptions, and reliable infrastructure validation.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@apollo/server": "^5.2.0",
+    "@as-integrations/express5": "^1.1.2",
     "@authzed/authzed-node": "^1.6.1",
     "@aws-sdk/client-s3": "^3.964.0",
     "@aws-sdk/lib-storage": "^3.964.0",
